--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,20 @@
 </head>
 <body>
   <header>
-      <h1><a href="#">Django blog</a></h1>
+      <div class="nav-left">
+          <h1><a href="{% url 'home' %}">Django blog</a></h1>
+      </div>
+      <div class="nav-right">
+          <a href="{% url 'post_new' %}">+ New Blog Post</a>
+      </div>
   </header>
+  {% if user.is_authenticated %}
+    <p>Hi {{ user.username }}</p>
+    <p><a href="{% url 'logout' %}">Log out</a></p>
+  {% else %}
+    <p>You are not logged in.</p>
+    <a href="{% url 'login' %}">Log in</a>
+  {% endif %}
   <div>
       {% block content %}
       {% endblock content %}
